data/derived/sp14/progs/unify/prog1366.ml.out
Characters 39-56:
  then n+digitsOfInt n-1;;
       ^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         unit
